# cloud-finops-agent

./: Dockerfile  README.md  app.py  baseline.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: __init__.py  app.py  index.html
