[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-finops-agent"
version = "1.0.0"
description = "Cloud FinOps Cost Optimization Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0"
]
